--- a/files/src/pages/list.html
+++ b/files/src/pages/list.html
@@ -7,7 +7,10 @@
         <script defer src="../scripts/modules/list.js" type="module"></script>
     </head>
     <body>
-        <div id="main">    
+        <div id="main">
+            <span class="list-title h2" to-translate>[MODS_LIST_TITLE]</span>
+            <div id="mods-list"></div>
+
             <span class="list-title h2" to-translate>[DLC_LIST_TITLE]</span>
             <div id="dlc-list"></div>
     
