--- a/files/src/pages/settings.html
+++ b/files/src/pages/settings.html
@@ -33,6 +33,9 @@
         
             <input type="checkbox" id="disable-dlc" class="form-check-input">
             <label to-translate for="disable-dlc" class="form-check-label">[DISABLE_DLC_LABEL]</label><br>
+
+            <input type="checkbox" id="disable-mods" class="form-check-input">
+            <label to-translate for="disable-mods" class="form-check-label">[DISABLE_MODS_LABEL]</label><br>
         
             <input type="checkbox" id="disable-editor-label" class="form-check-input">
             <label to-translate for="disable-editor-label" class="form-check-label">[DISABLE_EDITOR_LABEL_LABEL]</label><br>
