--- a/files/src/pages/list.html
+++ b/files/src/pages/list.html
@@ -2,20 +2,24 @@
 <html>
     <head>
         <title>SnowRunner XML Editor {--VERSION--}</title>
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
         <link rel="stylesheet" href="../styles/list.css">
-        <script defer src="../scripts/modules/list.js" type="module"></script>
+        <script defer src="../scripts/modules/list/main.js" type="module"></script>
     </head>
     <body>
         <div id="main">
-            <span class="list-title h2" to-translate>[MODS_LIST_TITLE]</span>
-            <div id="mods-list"></div>
+            <list
+                v-if='!modsDisabled'
+                src-type='mods'
+            ></list>
 
-            <span class="list-title h2" to-translate>[DLC_LIST_TITLE]</span>
-            <div id="dlc-list"></div>
-    
-            <span class="list-title h2" to-translate>[MAIN_LIST_TITLE]</span>
-            <div id="list"></div>
+            <list 
+                v-if='!dlcDisabled'
+                src-type='dlc'
+            ></list>
+
+            <list
+                src-type='main'
+            ></list>
         </div>
     </body>
 </html>
