--- a/files/src/pages/updateMessage.html
+++ b/files/src/pages/updateMessage.html
@@ -3,15 +3,15 @@
     <head>
         <title>Update</title>
         <link rel="stylesheet" href="../styles/style.css">
-        <script defer src="../scripts/modules/updateMessage.js" type="module"></script>
+        <script defer src="../scripts/modules/updateMessage/updateMessage.js" type="module"></script>
     </head>
     <body>
         <div id="main">
-            <h2 id="header" to-translate>[ALLOW_NEW_VERSION_AUTO]</h2>
+            <h2 id="header">{{ t.ALLOW_NEW_VERSION_AUTO }}</h2>
             <div id="buttons">
-            <button id="update" class="btn btn-primary" to-translate>[UPDATE]</button>
-            <button id="ignore" class="btn btn-danger" to-translate>[IGNORE]</button>
-            <button id="close" class="btn btn-secondary" to-translate>[CLOSE]</button>
+            <button id="update" class="btn btn-primary" @click='update'>{{ t.UPDATE }}</button>
+            <button id="ignore" class="btn btn-danger" @click='ignore'>{{ t.IGNORE }}</button>
+            <button id="close" class="btn btn-secondary" @click='close'>{{ t.CLOSE }}</button>
             </div>
         </div>
 
