--- a/files/src/pages/xmlEditor.html
+++ b/files/src/pages/xmlEditor.html
@@ -9,8 +9,9 @@
         <div id="main">
             <section id="work-zone">
                 <div id="editor">
+                    <search></search>
                     <h2 id="title" class="title">{{ title }}</h2>
-                    <params/></params>
+                    <params></params>
                     <button class="btn btn-primary" id="save-params" @click='save'></button>
                     <button class="btn btn-primary" id="back" @click='back'></button>
                 </div>
