--- a/files/src/pages/list.html
+++ b/files/src/pages/list.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="main">
+            <search></search>
             <list
                 v-if='!modsDisabled'
                 src-type='mods'
