--- a/files/src/pages/xmlEditor.html
+++ b/files/src/pages/xmlEditor.html
@@ -6,6 +6,7 @@
         <script defer src="../scripts/modules/xmlEditor/main.js" type="module"></script>
     </head>
     <body>
+        <h1 id="error">PARSE_FILE_ERROR</h1>
         <div id="main">
             <section id="work-zone">
                 <div id="editor">
@@ -17,5 +18,6 @@
                 </div>
             </section>
         </div>
+        
     </body>
 </html>
