--- a/files/src/pages/main.html
+++ b/files/src/pages/main.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>SnowRunner XML Editor {--VERSION--}</title>
-        <link rel="stylesheet" href="../styles/main.css">
-        <script defer src="../scripts/modules/main/main.js" type="module"></script>
-    </head>
-    <body>
-        <div id="main">
-            <div id="categories">
-                <category
-                    v-for='category in categories'
-                    :name='category'
-                ></category>
-            </div>
+
+<head>
+    <title>SnowRunner XML Editor {--VERSION--}</title>
+    <link rel="stylesheet" href="../styles/main.css">
+    <script defer src="../scripts/modules/main/main.js" type="module"></script>
+</head>
+
+<body>
+    <div id="main">
+        <div id="categories">
+            <category v-for='category in categories' :name='category'></category>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
