--- a/files/src/pages/download.html
+++ b/files/src/pages/download.html
@@ -16,6 +16,7 @@
             justify-content: center;
             align-items: center;
             height: 50px;
+            overflow: hidden;
         }
 
         #count {
