--- a/files/webpack/renderer/editor/index.html
+++ b/files/webpack/renderer/editor/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"><title>SnowRunner XML Editor {--VERSION--}</title><script defer="defer" src="../editor/index.js"></script></head><body><h1 id="error">PARSE_FILE_ERROR</h1><div id="main"></div></body></html>
+<!doctype html><html><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"><title>SnowRunner XML Editor {--VERSION--}</title><script defer="defer" src="../editor/index.js"></script></head><body><div id="main"></div></body></html>
