--- a/files/webpack/main/winrar/Order.htm
+++ b/files/webpack/main/winrar/Order.htm
@@ -39,10 +39,10 @@ h4 {text-align: center;}
 
 <p>≈сли вы хотите использовать WinRAR и RAR по окончании 40-дневного
 испытательного периода, то необходимо приобрести лицензию у одного из
-перечисленных <a href="http://www.rarlab.com/registration.php">здесь</a>
+перечисленных <a href="https://www.rarlab.com/registration.php">здесь</a>
 региональных распространителей.
  роме того, вы можете зарегистрироватьс€ в онлайн-режиме на сайте
-<a href="http://www.rarlab.com">www.rarlab.com</a>.</p>
+<a href="https://www.rarlab.com">www.rarlab.com</a>.</p>
 
 <p>ѕосле получени€ от вас оплаты мы вышлем вам регистрационный ключевой файл,
 соответствующий указанной вами регистрационной строке. ѕожалуйста, указывайте
