--- a/files/webpack/renderer/update/index.html
+++ b/files/webpack/renderer/update/index.html
@@ -1,19 +1,26 @@
-<!doctype html><html><head><meta charset="utf-8"><title>SnowRunner XML Editor {--VERSION--}</title><script defer="defer" src="../update/index.js"></script></head><body><div id="main"></div><script type="module">const { sendSync } = window.ipc
+<!doctype html><html><head><meta charset="utf-8"><title></title><script defer="defer" src="../927/index.js"></script><script defer="defer" src="../888/index.js"></script><script defer="defer" src="../456/index.js"></script><script defer="defer" src="../897/index.js"></script><script defer="defer" src="../763/index.js"></script><script defer="defer" src="../update/index.js"></script></head><body><div id="main"></div><script type="module">const { sendSync } = window.ipc
             const config = sendSync('property_config_get').value
-            const quit = () => sendSync('function_quit_call')
-            const toggleDevTools = () => sendSync('function_toggleDevTools_call')
 
-            document.title = document.title.replace('{--VERSION--}', `v${config.version}`)
+            function quit() {
+                sendSync('function_quit_call')
+            }
+            function devTools() {
+                sendSync('function_devTools_call')
+            }
+
+            document.title = `SnowRunner XML Editor v${config.version}`
             document.addEventListener('keydown', event => {
-                if (event.ctrlKey && event.code === 'KeyS') {
-                    const button = document.querySelector('#save')
-                    if (button)
-                        button.click()
-                }
-                else if (event.ctrlKey && event.code === 'KeyQ') {
+                const keyIs = code => event.code === `Key${code}`
+                const shift = event.shiftKey
+                const ctrl = event.ctrlKey
+                const dev = config.buildType === 'dev'
+
+                if (!ctrl) return
+
+                if (keyIs('S'))
+                    document.querySelector('#save')?.click()
+                else if (keyIs('Q'))
                     quit()
-                }
-                else if (event.code === 'KeyI' && event.ctrlKey && event.shiftKey && config.buildType === 'dev') {
-                    toggleDevTools()
-                }
+                else if (keyIs('I') && shift && dev)
+                    devTools()
             })</script></body></html>
